# Streamline

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  cpp.hint
include/: Awaitable.h  Callable.h  Exception.h  Latch.h  StreamLine.h  Task.h  TaskScheduler.h  ThreadPool.h  WaitGroup.h
src/: TaskScheduler.cpp  test.cpp
